name:                chargen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/atarv/chargen-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksi Tarvainen
maintainer:          aleksi@atarv.dev
copyright:           2020 Aleksi Tarvainen
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          assets/chargen.db
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chargen
                     , RandomUtil
                     , Character
                     , Character.Alignment
                     , Character.Attributes
                     , Character.SavingThrows
                     , Queries
  other-modules:       Paths_chargen
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , sqlite-simple
                     , random
                     , text
  default-language:    Haskell2010

executable chargen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chargen
  default-language:    Haskell2010

test-suite chargen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chargen
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atarv/chargen-backend
